--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,9 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
+allow 104.167.242.116;
+allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -59,7 +62,6 @@ allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
-allow 107.189.3.11;
 allow 107.189.31.225;
 allow 107.189.31.232;
 allow 107.189.31.33;
@@ -109,6 +111,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -120,6 +123,7 @@ allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.162.249.209;
 allow 139.180.187.117;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -130,6 +134,10 @@ allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
+allow 144.172.118.4;
+allow 144.172.118.55;
+allow 144.172.118.76;
+allow 144.172.118.90;
 allow 144.24.197.112;
 allow 146.59.234.220;
 allow 146.59.35.246;
@@ -295,7 +303,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -688,6 +695,7 @@ allow 198.98.51.249;
 allow 198.98.51.52;
 allow 198.98.52.24;
 allow 198.98.53.136;
+allow 198.98.54.34;
 allow 198.98.54.49;
 allow 198.98.60.90;
 allow 199.195.248.184;
@@ -812,6 +820,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -906,7 +915,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -931,7 +939,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -945,6 +952,9 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
+allow 2602:fccf:310:1::a;
+allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -994,7 +1004,6 @@ allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
-allow 2605:6400:30:efb2::;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1046,6 +1055,9 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
+allow 2605:6400:d814:1b8::4;
+allow 2605:6400:d814:2775::;
+allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
@@ -1467,7 +1479,7 @@ allow 38.152.53.253;
 allow 38.152.53.254;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.210.5.155;
+allow 44.221.96.164;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1561,6 +1573,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
