--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.29.5.130;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -134,6 +135,7 @@ allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
+allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.76;
 allow 144.172.118.90;
@@ -1055,6 +1057,7 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
+allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
@@ -1403,6 +1406,7 @@ allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
+allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
@@ -1452,6 +1456,7 @@ allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.114.37.81;
+allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1512,6 +1517,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.148.10.111;
 allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
@@ -1568,7 +1574,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.44.153.136;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
