--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.29.5.130;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -134,6 +135,7 @@ set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
+set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.76;
 set_real_ip_from 144.172.118.90;
@@ -1055,6 +1057,7 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
+set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:6400:d814:2775::;
 set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
@@ -1403,6 +1406,7 @@ set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:3e3:519::1;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
+set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:d602:1:14bc::2;
@@ -1452,6 +1456,7 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
+set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
 set_real_ip_from 37.120.239.59;
@@ -1512,6 +1517,7 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.61.185.172;
@@ -1568,7 +1574,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.44.153.136;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
