--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.29.5.130;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -18,7 +17,6 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
-allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -125,7 +123,6 @@ allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.162.249.209;
-allow 139.180.187.117;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.95.59.92;
@@ -198,6 +195,7 @@ allow 172.235.29.198;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 173.249.57.253;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -829,7 +827,6 @@ allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 201.23.12.101;
 allow 201.23.14.225;
 allow 201.23.16.249;
-allow 202.182.125.139;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.94.246.210;
@@ -859,7 +856,6 @@ allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -917,7 +913,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.165.104.119;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -941,9 +937,9 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
-allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
@@ -1061,7 +1057,6 @@ allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
-allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::3dde;
@@ -1111,6 +1106,7 @@ allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
+allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1481,6 +1477,7 @@ allow 38.152.53.253;
 allow 38.152.53.254;
 allow 38.97.116.244;
 allow 41.216.183.87;
+allow 44.213.184.24;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1678,7 +1675,10 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.51;
 allow 85.17.9.83;
+allow 85.204.116.92;
+allow 85.204.116.93;
 allow 85.215.76.62;
 allow 85.239.41.130;
 allow 85.93.218.204;
