--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -124,9 +124,9 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
-deny 2602:f9f3:0:2::3d;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
@@ -244,7 +244,6 @@ deny 2605:6400:d814:1b8::4;
 deny 2605:6400:d814:2775::;
 deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
-deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::3dde;
@@ -293,6 +292,7 @@ deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c206:2095:2624::1;
+deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
