--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,9 +13,6 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
-set_real_ip_from 104.167.242.116;
-set_real_ip_from 104.167.242.117;
-set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
@@ -111,6 +108,7 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
@@ -132,10 +130,6 @@ set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
-set_real_ip_from 144.172.118.4;
-set_real_ip_from 144.172.118.55;
-set_real_ip_from 144.172.118.76;
-set_real_ip_from 144.172.118.90;
 set_real_ip_from 144.24.197.112;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -252,6 +246,7 @@ set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.246;
 set_real_ip_from 184.105.48.40;
+set_real_ip_from 184.72.163.40;
 set_real_ip_from 184.75.223.203;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -820,6 +815,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -855,7 +851,6 @@ set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
@@ -950,9 +945,6 @@ set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:eb06::1;
-set_real_ip_from 2602:fccf:310:1::a;
-set_real_ip_from 2602:fccf:310:1::b;
-set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -965,6 +957,7 @@ set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
+set_real_ip_from 2605:6400:10:255::1;
 set_real_ip_from 2605:6400:10:3f9:116c:94a1:a862:dfec;
 set_real_ip_from 2605:6400:10:3f9:2fb4:3d9c:a1bc:73a3;
 set_real_ip_from 2605:6400:10:3f9:42af:65de:583f:49f1;
@@ -1053,9 +1046,6 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
-set_real_ip_from 2605:6400:d814:1b8::4;
-set_real_ip_from 2605:6400:d814:2775::;
-set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -1571,9 +1561,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.44.125.16;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
