--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -678,6 +678,7 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.26.247.0;
 set_real_ip_from 195.80.151.242;
+set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.154.93.66;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -710,6 +711,7 @@ set_real_ip_from 199.195.251.202;
 set_real_ip_from 199.195.251.78;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
+set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -979,6 +981,7 @@ set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:7ce:1211:2284:56a3:1121;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
+set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 set_real_ip_from 2605:6400:20:104e::2;
@@ -1475,7 +1478,6 @@ set_real_ip_from 38.152.53.253;
 set_real_ip_from 38.152.53.254;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
-set_real_ip_from 44.214.214.8;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1570,6 +1572,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.206.194.226;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
