--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -916,6 +916,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -939,6 +940,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1478,6 +1480,7 @@ deny 38.152.53.253;
 deny 38.152.53.254;
 deny 38.97.116.244;
 deny 41.216.183.87;
+deny 44.220.236.141;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1572,7 +1575,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.206.194.226;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
