--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -156,6 +156,7 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
 deny 154.26.159.157;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.19.230.94;
@@ -206,6 +207,7 @@ deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.97.114.202;
 deny 178.162.209.56;
+deny 178.17.170.169;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -303,7 +305,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -713,6 +714,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -1079,6 +1081,7 @@ deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
+deny 2a00:1dc0:caff:132::5b6d;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
@@ -1405,7 +1408,6 @@ deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
@@ -1454,8 +1456,8 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 3.211.99.11;
 deny 35.0.127.52;
-deny 37.114.37.81;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1480,7 +1482,6 @@ deny 38.152.53.253;
 deny 38.152.53.254;
 deny 38.97.116.244;
 deny 41.216.183.87;
-deny 44.220.236.141;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
