--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -262,6 +263,7 @@ deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
+deny 2a00:1dc0:caff:132::5b6d;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
@@ -588,7 +590,6 @@ deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
