--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -156,7 +156,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -207,6 +206,7 @@ allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.202;
 allow 178.162.209.56;
+allow 178.17.170.125;
 allow 178.17.170.169;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -305,6 +305,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -714,7 +715,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -1081,6 +1081,7 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
+allow 2a00:1dc0:caff:12f::c754;
 allow 2a00:1dc0:caff:132::5b6d;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
@@ -1456,7 +1457,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.211.99.11;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1618,6 +1618,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.88.13.136;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
