Update lists at 20240713-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,7 +113,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -125,7 +124,6 @@ allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.95.59.92;
@@ -190,10 +188,8 @@ allow 171.25.193.80;
 allow 172.104.164.133;
 allow 172.104.182.84;
 allow 172.104.214.41;
-allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.232.164.52;
-allow 172.234.33.174;
 allow 172.235.29.198;
 allow 172.81.131.139;
 allow 172.81.131.156;
@@ -306,7 +302,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -643,7 +638,6 @@ allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
-allow 193.233.133.42;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
@@ -809,7 +803,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1182,6 +1175,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
@@ -1427,7 +1421,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.219.101.195;
+allow 34.236.111.196;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1647,6 +1641,7 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.251;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
