--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -276,6 +276,7 @@ allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
 allow 185.107.70.56;
+allow 185.11.139.198;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
@@ -1063,6 +1064,7 @@ allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:17d8:100:1::fd1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12f::c754;
@@ -1173,7 +1175,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1544,10 +1545,9 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.54.2.241;
+allow 52.205.71.41;
 allow 5.255.100.219;
 allow 5.255.100.26;
-allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
