Update lists at 20240713-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,6 +114,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -237,19 +238,7 @@ allow 179.43.161.171;
 allow 179.43.161.172;
 allow 179.43.161.173;
 allow 179.43.161.174;
-allow 179.43.167.100;
-allow 179.43.167.101;
-allow 179.43.167.102;
-allow 179.43.167.103;
-allow 179.43.167.104;
-allow 179.43.167.105;
-allow 179.43.167.106;
-allow 179.43.167.107;
-allow 179.43.167.108;
-allow 179.43.167.109;
-allow 179.43.167.110;
 allow 179.43.167.205;
-allow 179.43.167.99;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -664,7 +653,6 @@ allow 195.176.3.24;
 allow 195.26.247.0;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.154.93.66;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -808,6 +796,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1080,18 +1069,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a763;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a764;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a765;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a766;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a767;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a768;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a769;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76a;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76b;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76c;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76d;
-allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76e;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1178,7 +1155,6 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
@@ -1438,16 +1414,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 38.152.53.242;
-allow 38.152.53.243;
-allow 38.152.53.244;
-allow 38.152.53.245;
-allow 38.152.53.246;
-allow 38.152.53.250;
-allow 38.152.53.251;
-allow 38.152.53.252;
-allow 38.152.53.253;
-allow 38.152.53.254;
 allow 38.97.116.244;
 allow 41.216.183.87;
 allow 45.11.59.28;
@@ -1543,7 +1509,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1572,7 +1537,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.242.26.43;
+allow 54.163.184.30;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1643,7 +1608,6 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.251;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
