--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,6 +107,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -279,18 +280,6 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a763;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a764;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a765;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a766;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a767;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a768;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a769;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76a;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76b;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76c;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76d;
-deny 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76e;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
@@ -377,7 +366,6 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
