--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -114,6 +114,7 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
@@ -237,19 +238,7 @@ set_real_ip_from 179.43.161.171;
 set_real_ip_from 179.43.161.172;
 set_real_ip_from 179.43.161.173;
 set_real_ip_from 179.43.161.174;
-set_real_ip_from 179.43.167.100;
-set_real_ip_from 179.43.167.101;
-set_real_ip_from 179.43.167.102;
-set_real_ip_from 179.43.167.103;
-set_real_ip_from 179.43.167.104;
-set_real_ip_from 179.43.167.105;
-set_real_ip_from 179.43.167.106;
-set_real_ip_from 179.43.167.107;
-set_real_ip_from 179.43.167.108;
-set_real_ip_from 179.43.167.109;
-set_real_ip_from 179.43.167.110;
 set_real_ip_from 179.43.167.205;
-set_real_ip_from 179.43.167.99;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
@@ -664,7 +653,6 @@ set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.26.247.0;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.154.93.66;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -808,6 +796,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1080,18 +1069,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a763;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a764;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a765;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a766;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a767;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a768;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a769;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76a;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76b;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76c;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76d;
-set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76e;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1178,7 +1155,6 @@ set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a04:9dc0:31::c0cc:73;
 set_real_ip_from 2a04:9dc0:31::c0cc:fb;
 set_real_ip_from 2a05:541:110:20::1;
@@ -1438,16 +1414,6 @@ set_real_ip_from 37.252.254.33;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 38.152.53.242;
-set_real_ip_from 38.152.53.243;
-set_real_ip_from 38.152.53.244;
-set_real_ip_from 38.152.53.245;
-set_real_ip_from 38.152.53.246;
-set_real_ip_from 38.152.53.250;
-set_real_ip_from 38.152.53.251;
-set_real_ip_from 38.152.53.252;
-set_real_ip_from 38.152.53.253;
-set_real_ip_from 38.152.53.254;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
 set_real_ip_from 45.11.59.28;
@@ -1543,7 +1509,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1572,7 +1537,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.242.26.43;
+set_real_ip_from 54.163.184.30;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1643,7 +1608,6 @@ set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
 set_real_ip_from 83.97.20.251;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
