--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -125,7 +125,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -315,7 +314,6 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -366,6 +364,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
