--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -129,6 +129,7 @@ deny 138.59.18.110;
 deny 139.162.249.209;
 deny 139.99.172.11;
 deny 139.99.8.57;
+deny 141.239.146.142;
 deny 141.95.59.92;
 deny 141.95.59.93;
 deny 141.98.11.62;
@@ -295,6 +296,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -537,7 +539,6 @@ deny 185.56.83.83;
 deny 185.67.82.114;
 deny 185.7.33.146;
 deny 185.82.219.109;
-deny 185.84.31.254;
 deny 188.165.200.97;
 deny 188.172.228.41;
 deny 188.172.229.15;
@@ -889,8 +890,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
-deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -913,7 +912,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1104,7 +1102,6 @@ deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 deny 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-deny 2a03:6f20:531::254;
 deny 2a03:94e0:2421:dead::1;
 deny 2a03:94e0:242c:dead::1;
 deny 2a03:94e0:243a:dead::1;
@@ -1155,6 +1152,7 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
@@ -1400,6 +1398,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.233.93.141;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1484,6 +1483,7 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.182.21.248;
+deny 46.195.110.231;
 deny 46.226.105.168;
 deny 46.226.164.14;
 deny 46.232.251.191;
@@ -1537,7 +1537,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.163.184.30;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1585,7 +1584,6 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.102.150.51;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
@@ -1608,6 +1606,7 @@ deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
 deny 83.97.20.251;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
