Update lists at 20240714-0300

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -260,7 +260,6 @@ deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
-deny 2a00:17d8:100:1::fd1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12f::c754;
@@ -314,6 +313,7 @@ deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 deny 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:6f20:531::254;
 deny 2a03:94e0:2421:dead::1;
 deny 2a03:94e0:242c:dead::1;
 deny 2a03:94e0:243a:dead::1;
