--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -201,7 +201,6 @@ deny 172.81.131.156;
 deny 172.81.132.94;
 deny 173.249.57.253;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
@@ -265,7 +264,6 @@ deny 185.107.57.64;
 deny 185.107.57.65;
 deny 185.107.57.66;
 deny 185.107.70.56;
-deny 185.11.139.198;
 deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.113.128.30;
@@ -539,6 +537,7 @@ deny 185.56.83.83;
 deny 185.67.82.114;
 deny 185.7.33.146;
 deny 185.82.219.109;
+deny 185.84.31.254;
 deny 188.165.200.97;
 deny 188.172.228.41;
 deny 188.172.229.15;
@@ -890,6 +889,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -1048,7 +1048,6 @@ deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
-deny 2a00:17d8:100:1::fd1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12f::c754;
@@ -1102,6 +1101,7 @@ deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 deny 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:6f20:531::254;
 deny 2a03:94e0:2421:dead::1;
 deny 2a03:94e0:242c:dead::1;
 deny 2a03:94e0:243a:dead::1;
@@ -1398,7 +1398,6 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.233.93.141;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1415,6 +1414,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 41.216.183.87;
+deny 44.218.136.221;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1509,6 +1509,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
