--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -137,6 +137,7 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
+allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -266,6 +267,8 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12f::c754;
 allow 2a00:1dc0:caff:132::5b6d;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:142::ad49;
+allow 2a00:1dc0:caff:143::9a47;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
