--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -209,11 +209,13 @@ deny 178.162.209.56;
 deny 178.17.170.125;
 deny 178.17.170.169;
 deny 178.17.170.23;
+deny 178.17.170.71;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.131.141;
 deny 178.175.142.26;
+deny 178.175.148.105;
 deny 178.175.148.209;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -293,6 +295,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -854,6 +857,7 @@ deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
+deny 23.137.253.27;
 deny 23.152.24.77;
 deny 23.154.177.10;
 deny 23.154.177.11;
@@ -922,6 +926,7 @@ deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
+deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -1052,6 +1057,8 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12f::c754;
 deny 2a00:1dc0:caff:132::5b6d;
 deny 2a00:1dc0:caff:138::94d2;
+deny 2a00:1dc0:caff:142::ad49;
+deny 2a00:1dc0:caff:143::9a47;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
@@ -1507,7 +1514,6 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1535,6 +1541,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 52.87.133.56;
 deny 5.34.182.203;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1547,7 +1554,6 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.80.133.139;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
@@ -1618,12 +1624,14 @@ deny 85.215.76.62;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
+deny 86.104.194.27;
 deny 87.118.110.27;
 deny 87.118.116.103;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.254.132;
+deny 87.120.254.192;
 deny 88.209.197.213;
 deny 88.80.20.86;
 deny 89.147.108.209;
@@ -1649,6 +1657,7 @@ deny 91.103.253.141;
 deny 91.132.144.59;
 deny 91.139.160.150;
 deny 91.202.5.104;
+deny 91.203.145.116;
 deny 91.206.26.26;
 deny 91.208.206.47;
 deny 91.208.75.153;
@@ -1668,6 +1677,7 @@ deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
 deny 93.123.12.112;
+deny 93.123.12.240;
 deny 93.90.74.31;
 deny 93.95.225.141;
 deny 93.95.228.125;
