--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -91,7 +91,6 @@ deny 107.189.8.238;
 deny 107.189.8.5;
 deny 107.189.8.56;
 deny 107.189.8.65;
-deny 107.23.114.115;
 deny 108.181.124.143;
 deny 108.181.27.205;
 deny 108.181.69.243;
@@ -296,7 +295,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -892,7 +890,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -909,6 +906,7 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2.58.95.35;
+deny 2.58.95.38;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
@@ -917,7 +915,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1160,6 +1157,7 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
@@ -1419,6 +1417,7 @@ deny 37.252.254.33;
 deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
+deny 3.82.40.135;
 deny 38.97.116.244;
 deny 41.216.183.87;
 deny 45.11.59.28;
@@ -1611,6 +1610,7 @@ deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
 deny 83.97.20.251;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
