--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -126,7 +126,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -368,6 +367,7 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
